[gd_scene load_steps=10 format=3 uid="uid://lws0kghhp3gj"]

[ext_resource type="Script" uid="uid://5pep312wdtwk" path="res://scripts/ui/demo.gd" id="1_rwgll"]
[ext_resource type="Script" uid="uid://bwcspbq3t2qid" path="res://scripts/components/ui/animated_counter.gd" id="2_1lx1b"]
[ext_resource type="Script" uid="uid://ox2uyvcmytm6" path="res://scripts/ui/demo/animated_counter_demo.gd" id="2_ni7x5"]
[ext_resource type="Script" uid="uid://8krug0mq1f1f" path="res://scripts/components/ui/hover_button.gd" id="2_ubutw"]
[ext_resource type="Script" uid="uid://ddn0srdnl5pp8" path="res://scripts/components/ui/rewrite_label.gd" id="3_rwgll"]
[ext_resource type="Script" uid="uid://dwknu5v8jc8jm" path="res://scripts/ui/demo/rewrite_label_demo.gd" id="4_wye5b"]
[ext_resource type="Script" uid="uid://bgu1v264n71y5" path="res://scripts/components/ui/notification.gd" id="7_wu88w"]
[ext_resource type="Script" uid="uid://dfe1e7o1ejosv" path="res://scripts/components/ui/side_bar.gd" id="8_btwbs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wye5b"]
bg_color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="AnimatedControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwgll")
metadata/_custom_type_script = "uid://bjoem673nqpg4"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -110.0
offset_right = 165.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wye5b")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="AnimatedCounterDemo" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_ni7x5")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo"]
layout_mode = 2
text = "Animated Counter"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "value"

[node name="TextEdit2" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "pattern"

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="AnimatedCounter" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_1lx1b")
transition = 7
metadata/_custom_type_script = "uid://bwcspbq3t2qid"

[node name="RewriteLabelDemo" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_wye5b")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo"]
layout_mode = 2
text = "Rewrite label"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="RewriteLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_rwgll")
metadata/_custom_type_script = "uid://ddn0srdnl5pp8"

[node name="HoverButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Toggle side bar"
script = ExtResource("2_ubutw")

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Close"
script = ExtResource("2_ubutw")

[node name="Notification" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 38.0
grow_horizontal = 0
script = ExtResource("7_wu88w")
metadata/_custom_type_script = "uid://bgu1v264n71y5"

[node name="Sidebar" type="Control" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("8_btwbs")
metadata/_custom_type_script = "uid://dfe1e7o1ejosv"

[node name="PanelContainer" type="PanelContainer" parent="Sidebar"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Sidebar/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Sidebar/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Sidebar/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Hello !"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Sidebar/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Sidebar/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et tortor lobortis, vestibulum ligula ut, sagittis justo. Maecenas et posuere justo. Sed aliquam pretium nisl nec varius. Curabitur iaculis condimentum lacinia. Nullam non convallis odio. Sed quam odio, accumsan at lobortis eu, ullamcorper eu nibh. Praesent sed elit lectus. Aliquam erat volutpat. Nulla fermentum rutrum ligula, non condimentum nunc rutrum vitae. Vivamus scelerisque mattis eros at laoreet. Phasellus id cursus erat. Etiam velit velit, varius et arcu vitae, vestibulum facilisis quam. In feugiat quam ut pulvinar pretium.

Curabitur fringilla, sapien in ultricies congue, dui tortor varius nisi, eu tempor mi mauris sed urna. Etiam a rhoncus felis, et auctor elit. Duis ac ex sit amet nulla luctus consequat. Nullam fringilla, lectus eu aliquet faucibus, mi nibh dignissim velit, vel consequat quam massa ac lectus. Mauris condimentum nisi nibh, eu gravida metus aliquam in. Nunc eleifend libero mi, nec bibendum nibh congue vitae. Maecenas lacinia pulvinar fermentum. Donec dapibus enim et eros malesuada bibendum. Maecenas rhoncus sem dui, vel varius tellus viverra non. Mauris ut purus ac est rhoncus efficitur sit amet at elit. Vivamus molestie mi sed magna pellentesque, quis scelerisque tortor molestie.

Aliquam facilisis diam ut lacus gravida, id sodales sapien dignissim. Aliquam ultricies velit iaculis ligula vehicula, eu hendrerit neque viverra. Vivamus faucibus vulputate leo, ut placerat tortor porttitor non. Maecenas nec ligula metus. Sed cursus vitae nisl id molestie. Vivamus elementum mi at placerat tempor. Nulla placerat nulla a metus mollis aliquam. Suspendisse dapibus aliquet eros ac vehicula. Donec dui nulla, posuere sed dictum quis, facilisis quis odio. Vestibulum rhoncus ornare nulla non interdum. Sed sem ante, bibendum eu venenatis tempus, feugiat vel turpis. Fusce venenatis, urna nec varius lacinia, erat lacus hendrerit tellus, a fermentum est mauris in lacus. Ut magna mauris, auctor nec libero vehicula, pulvinar tristique quam. Ut lacinia condimentum orci vel feugiat. Proin et enim eu elit laoreet facilisis non at mauris. Vivamus cursus, dui nec mattis gravida, leo felis venenatis nibh, id tempor metus leo sed sapien."
autowrap_mode = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo/HBoxContainer/Button" to="." method="_on_counter_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo/HBoxContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/AnimatedCounterDemo" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo/HBoxContainer/Button" to="." method="_on_rewrite_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo/HBoxContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/RewriteLabelDemo" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HoverButton" to="." method="_on_hover_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
